# 15821_mot_accuracy_measurement

./: MOT17-02-DPM_per_frame_latency.csv  MOT17-02-DPM_per_frame_timings.csv  MOT17-02-DPM_results.txt  MOT17-02-DPM_results_1.txt  MOT17-02-DPM_results_3.txt  MOT17-02-DPM_tracking_results.txt  MOT17-09-DPM-results_n2.txt  MOT17-09-DPM-results_n3.txt  MOT17-09-DPM-results_n4.txt  MOT17-09-DPM-results_s2.txt  MOT17-09-DPM-results_s3.txt  MOT17-09-DPM-results_s4.txt  MOT17-09-DPM-results_s5.txt  MOT17-09-DPM-results_s6.txt  MOT17-09-DPM-results_s7.txt  breakdown_11n1.csv  breakdown_11n3.csv  breakdown_11s1.csv  breakdown_n1.csv  breakdown_n2.csv  breakdown_n3.csv  breakdown_n4.csv  breakdown_results_edge_11n.csv  breakdown_results_edge_11s.csv  breakdown_results_edge_11x.csv  breakdown_results_local_11n_1.csv  breakdown_results_local_11n_3.csv  breakdown_results_local_11s_1.csv  breakdown_results_local_11s_6.csv  breakdown_s1.csv  breakdown_s2.csv  breakdown_s3.csv  breakdown_s4.csv  breakdown_s5.csv  breakdown_s6.csv  breakdown_s7.csv  build.gradle  end_to_end_results_edge_11n.csv  end_to_end_results_local_11n_1.csv  end_to_end_results_local_11n_3.csv  (+6 more)
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolo11n_full_integer_quant.tflite  yolo11n_full_integer_quant_edgetpu.tflite
app/src/main/cpp/: BYTETracker.cpp  BYTETracker.h  ByteTrackJNI.cpp  CMakeLists.txt  HybridTracker.cpp  HybridTracker.h  HybridTrackerJNI.cpp  LightweightTracker.cpp  LightweightTracker.h  STrack.cpp  STrack.h  utils.cpp
app/src/main/java/edu/cmu/cs/face/: CameraManager.java  Detection.java  MainActivity.java  OverlayView.java  ResultParser.java  ServerClientWrapper.java  YuvToRgbConverter.java
app/src/main/java/edu/cmu/cs/mycamera/: MyCameraCapture.java
app/src/main/res/values/: strings.xml
waste_data/: MOT17-04-DPM-results.txt  MOT17-05-DPM-results.txt  MOT17-09-FRCNN-results.txt  MOT17-10-DPM-results.txt  MOT17-11-DPM-results.txt  MOT17-13-DPM-results.txt
wasted_data/: MOT17-02-DPM-results.txt  MOT17-02-DPM_amortized_latency.csv  MOT17-02-DPM_per_frame_latency.csv  MOT17-02-DPM_results.txt  MOT17-05-DPM_amortized_latency.csv  breakdown_n1.csv  breakdown_n2.csv  breakdown_n3.csv  breakdown_n4.csv  breakdown_results_edge_11n.csv  breakdown_results_edge_11s.csv  breakdown_results_edge_11x.csv  breakdown_results_local_11n_3.csv  breakdown_s1.csv  breakdown_s2.csv  breakdown_s3.csv  breakdown_s4.csv  breakdown_s5.csv  breakdown_s6.csv  breakdown_s7.csv
